--- a/src/css/icon.scss
+++ b/src/css/icon.scss
@@ -314,21 +314,6 @@
 .icon-contact_phone:before {
     content: "\e0cf";
 }
-.icon-contact_mail:before {
-    content: "\e0d0";
-}
-.icon-ring_volume:before {
-    content: "\e0d1";
-}
-.icon-speaker_phone:before {
-    content: "\e0d2";
-}
-.icon-stay_current_landscape:before {
-    content: "\e0d3";
-}
-.icon-stay_current_portrait:before {
-    content: "\e0d4";
-}
 .icon-stay_primary_landscape:before {
     content: "\e0d5";
 }
@@ -953,42 +938,6 @@
 .icon-memory:before {
     content: "\e322";
 }
-.icon-mouse:before {
-    content: "\e323";
-}
-.icon-phone_android:before {
-    content: "\e324";
-}
-.icon-phone_iphone:before {
-    content: "\e325";
-}
-.icon-phonelink:before {
-    content: "\e326";
-}
-.icon-phonelink_off:before {
-    content: "\e327";
-}
-.icon-router:before {
-    content: "\e328";
-}
-.icon-scanner:before {
-    content: "\e329";
-}
-.icon-security:before {
-    content: "\e32a";
-}
-.icon-sim_card:before {
-    content: "\e32b";
-}
-.icon-smartphone:before {
-    content: "\e32c";
-}
-.icon-speaker:before {
-    content: "\e32d";
-}
-.icon-speaker_group:before {
-    content: "\e32e";
-}
 .icon-tablet:before {
     content: "\e32f";
 }
@@ -997,42 +946,6 @@
 }
 .icon-tablet_mac:before {
     content: "\e331";
-}
-.icon-toys:before {
-    content: "\e332";
-}
-.icon-tv:before {
-    content: "\e333";
-}
-.icon-watch:before {
-    content: "\e334";
-}
-.icon-device_hub:before {
-    content: "\e335";
-}
-.icon-power_input:before {
-    content: "\e336";
-}
-.icon-devices_other:before {
-    content: "\e337";
-}
-.icon-videogame_asset:before {
-    content: "\e338";
-}
-.icon-add_to_photos:before {
-    content: "\e39d";
-}
-.icon-adjust:before {
-    content: "\e39e";
-}
-.icon-assistant:before {
-    content: "\e39f";
-}
-.icon-assistant_photo:before {
-    content: "\e3a0";
-}
-.icon-audiotrack:before {
-    content: "\e3a1";
 }
 .icon-blur_circular:before {
     content: "\e3a2";
@@ -1154,21 +1067,6 @@
 .icon-edit:before {
     content: "\e3c9";
 }
-.icon-exposure:before {
-    content: "\e3ca";
-}
-.icon-exposure_minus_1:before {
-    content: "\e3cb";
-}
-.icon-exposure_minus_2:before {
-    content: "\e3cc";
-}
-.icon-exposure_plus_1:before {
-    content: "\e3cd";
-}
-.icon-exposure_plus_2:before {
-    content: "\e3ce";
-}
 .icon-exposure_zero:before {
     content: "\e3cf";
 }
@@ -1256,188 +1154,11 @@
 .icon-grid_on:before {
     content: "\e3ec";
 }
-.icon-hdr_off:before {
-    content: "\e3ed";
-}
 .icon-hdr_on:before {
     content: "\e3ee";
 }
-.icon-hdr_strong:before {
-    content: "\e3f1";
-}
-.icon-hdr_weak:before {
-    content: "\e3f2";
-}
-.icon-healing:before {
-    content: "\e3f3";
-}
-.icon-image:before {
-    content: "\e3f4";
-}
-.icon-image_aspect_ratio:before {
-    content: "\e3f5";
-}
-.icon-iso:before {
-    content: "\e3f6";
-}
-.icon-landscape:before {
-    content: "\e3f7";
-}
-.icon-leak_add:before {
-    content: "\e3f8";
-}
-.icon-leak_remove:before {
-    content: "\e3f9";
-}
-.icon-lens:before {
-    content: "\e3fa";
-}
-.icon-looks_3:before {
-    content: "\e3fb";
-}
-.icon-looks:before {
-    content: "\e3fc";
-}
-.icon-looks_4:before {
-    content: "\e3fd";
-}
-.icon-looks_5:before {
-    content: "\e3fe";
-}
-.icon-looks_6:before {
-    content: "\e3ff";
-}
-.icon-looks_one:before {
-    content: "\e400";
-}
-.icon-looks_two:before {
-    content: "\e401";
-}
-.icon-loupe:before {
-    content: "\e402";
-}
-.icon-monochrome_photos:before {
-    content: "\e403";
-}
-.icon-movie_creation:before {
-    content: "\e404";
-}
-.icon-music_note:before {
-    content: "\e405";
-}
-.icon-nature:before {
-    content: "\e406";
-}
-.icon-nature_people:before {
-    content: "\e407";
-}
-.icon-navigate_before:before {
-    content: "\e408";
-}
-.icon-navigate_next:before {
-    content: "\e409";
-}
-.icon-palette:before {
-    content: "\e40a";
-}
-.icon-panorama:before {
-    content: "\e40b";
-}
-.icon-panorama_fish_eye:before {
-    content: "\e40c";
-}
-.icon-panorama_horizontal:before {
-    content: "\e40d";
-}
-.icon-panorama_vertical:before {
-    content: "\e40e";
-}
-.icon-panorama_wide_angle:before {
-    content: "\e40f";
-}
-.icon-photo2:before {
-    content: "\e410";
-}
-.icon-photo_album:before {
-    content: "\e411";
-}
-.icon-photo_camera:before {
-    content: "\e412";
-}
-.icon-photo_library:before {
-    content: "\e413";
-}
-.icon-picture_as_pdf:before {
-    content: "\e415";
-}
-.icon-portrait:before {
-    content: "\e416";
-}
 .icon-remove_red_eye:before {
     content: "\e417";
-}
-.icon-rotate_90_degrees_ccw:before {
-    content: "\e418";
-}
-.icon-rotate_left:before {
-    content: "\e419";
-}
-.icon-rotate_right:before {
-    content: "\e41a";
-}
-.icon-slideshow:before {
-    content: "\e41b";
-}
-.icon-straighten:before {
-    content: "\e41c";
-}
-.icon-style:before {
-    content: "\e41d";
-}
-.icon-switch_camera:before {
-    content: "\e41e";
-}
-.icon-switch_video:before {
-    content: "\e41f";
-}
-.icon-tag_faces:before {
-    content: "\e420";
-}
-.icon-texture:before {
-    content: "\e421";
-}
-.icon-timelapse:before {
-    content: "\e422";
-}
-.icon-timer_10:before {
-    content: "\e423";
-}
-.icon-timer_3:before {
-    content: "\e424";
-}
-.icon-timer:before {
-    content: "\e425";
-}
-.icon-timer_off:before {
-    content: "\e426";
-}
-.icon-tonality:before {
-    content: "\e427";
-}
-.icon-transform:before {
-    content: "\e428";
-}
-.icon-tune:before {
-    content: "\e429";
-}
-.icon-view_comfortable:before {
-    content: "\e42a";
-}
-.icon-view_compact:before {
-    content: "\e42b";
-}
-.icon-wb_auto:before {
-    content: "\e42c";
 }
 .icon-wb_cloudy:before {
     content: "\e42d";
@@ -1844,251 +1565,8 @@
 .icon-airline_seat_individual_suite:before {
     content: "\e632";
 }
-.icon-airline_seat_legroom_extra:before {
-    content: "\e633";
-}
-.icon-airline_seat_legroom_normal:before {
-    content: "\e634";
-}
-.icon-airline_seat_legroom_reduced:before {
-    content: "\e635";
-}
-.icon-airline_seat_recline_extra:before {
-    content: "\e636";
-}
-.icon-airline_seat_recline_normal:before {
-    content: "\e637";
-}
-.icon-confirmation_number:before {
-    content: "\e638";
-}
-.icon-live_tv:before {
-    content: "\e639";
-}
-.icon-ondemand_video:before {
-    content: "\e63a";
-}
-.icon-personal_video:before {
-    content: "\e63b";
-}
-.icon-power:before {
-    content: "\e63c";
-}
-.icon-wc:before {
-    content: "\e63d";
-}
-.icon-wifi:before {
-    content: "\e63e";
-}
-.icon-enhanced_encryption:before {
-    content: "\e63f";
-}
-.icon-network_check:before {
-    content: "\e640";
-}
-.icon-no_encryption:before {
-    content: "\e641";
-}
-.icon-rv_hookup:before {
-    content: "\e642";
-}
-.icon-cake:before {
-    content: "\e7e9";
-}
-.icon-domain:before {
-    content: "\e7ee";
-}
-.icon-group:before {
-    content: "\e7ef";
-}
-.icon-group_add:before {
-    content: "\e7f0";
-}
-.icon-location_city:before {
-    content: "\e7f1";
-}
-.icon-mood:before {
-    content: "\e7f2";
-}
-.icon-mood_bad:before {
-    content: "\e7f3";
-}
-.icon-notifications:before {
-    content: "\e7f4";
-}
-.icon-notifications_none:before {
-    content: "\e7f5";
-}
-.icon-notifications_off:before {
-    content: "\e7f6";
-}
-.icon-notifications_active:before {
-    content: "\e7f7";
-}
-.icon-notifications_paused:before {
-    content: "\e7f8";
-}
-.icon-pages:before {
-    content: "\e7f9";
-}
-.icon-party_mode:before {
-    content: "\e7fa";
-}
-.icon-people:before {
-    content: "\e7fb";
-}
-.icon-people_outline:before {
-    content: "\e7fc";
-}
-.icon-person:before {
-    content: "\e7fd";
-}
-.icon-person_add:before {
-    content: "\e7fe";
-}
-.icon-person_outline:before {
-    content: "\e7ff";
-}
-.icon-plus_one:before {
-    content: "\e800";
-}
-.icon-poll:before {
-    content: "\e801";
-}
 .icon-public:before {
     content: "\e80b";
-}
-.icon-school:before {
-    content: "\e80c";
-}
-.icon-share:before {
-    content: "\e80d";
-}
-.icon-whatshot:before {
-    content: "\e80e";
-}
-.icon-check_box:before {
-    content: "\e834";
-}
-.icon-check_box_outline_blank:before {
-    content: "\e835";
-}
-.icon-radio_button_unchecked:before {
-    content: "\e836";
-}
-.icon-radio_button_checked:before {
-    content: "\e837";
-}
-.icon-star2:before {
-    content: "\e838";
-}
-.icon-star_half:before {
-    content: "\e839";
-}
-.icon-star_outline:before {
-    content: "\e83a";
-}
-.icon-3d_rotation:before {
-    content: "\e84d";
-}
-.icon-accessibility:before {
-    content: "\e84e";
-}
-.icon-account_balance:before {
-    content: "\e84f";
-}
-.icon-account_balance_wallet:before {
-    content: "\e850";
-}
-.icon-account_box:before {
-    content: "\e851";
-}
-.icon-account_circle:before {
-    content: "\e853";
-}
-.icon-add_shopping_cart:before {
-    content: "\e854";
-}
-.icon-alarm:before {
-    content: "\e855";
-}
-.icon-alarm_add:before {
-    content: "\e856";
-}
-.icon-alarm_off:before {
-    content: "\e857";
-}
-.icon-alarm_on:before {
-    content: "\e858";
-}
-.icon-android:before {
-    content: "\e859";
-}
-.icon-announcement:before {
-    content: "\e85a";
-}
-.icon-aspect_ratio:before {
-    content: "\e85b";
-}
-.icon-assessment:before {
-    content: "\e85c";
-}
-.icon-assignment:before {
-    content: "\e85d";
-}
-.icon-assignment_ind:before {
-    content: "\e85e";
-}
-.icon-assignment_late:before {
-    content: "\e85f";
-}
-.icon-assignment_return:before {
-    content: "\e860";
-}
-.icon-assignment_returned:before {
-    content: "\e861";
-}
-.icon-assignment_turned_in:before {
-    content: "\e862";
-}
-.icon-autorenew:before {
-    content: "\e863";
-}
-.icon-backup:before {
-    content: "\e864";
-}
-.icon-book:before {
-    content: "\e865";
-}
-.icon-bookmark:before {
-    content: "\e866";
-}
-.icon-bookmark_outline:before {
-    content: "\e867";
-}
-.icon-bug_report:before {
-    content: "\e868";
-}
-.icon-build:before {
-    content: "\e869";
-}
-.icon-cached:before {
-    content: "\e86a";
-}
-.icon-change_history:before {
-    content: "\e86b";
-}
-.icon-check_circle:before {
-    content: "\e86c";
-}
-.icon-chrome_reader_mode:before {
-    content: "\e86d";
-}
-.icon-class:before {
-    content: "\e86e";
-}
-.icon-code:before {
-    content: "\e86f";
 }
 .icon-credit_card:before {
     content: "\e870";
@@ -2096,71 +1574,11 @@
 .icon-dashboard:before {
     content: "\e871";
 }
-.icon-delete:before {
-    content: "\e872";
-}
-.icon-description:before {
-    content: "\e873";
-}
-.icon-dns:before {
-    content: "\e875";
-}
-.icon-done:before {
-    content: "\e876";
-}
-.icon-done_all:before {
-    content: "\e877";
-}
-.icon-event:before {
-    content: "\e878";
-}
-.icon-exit_to_app:before {
-    content: "\e879";
-}
-.icon-explore:before {
-    content: "\e87a";
-}
-.icon-extension:before {
-    content: "\e87b";
-}
-.icon-face:before {
-    content: "\e87c";
-}
 .icon-favorite:before {
     content: "\e87d";
 }
 .icon-favorite_outline:before {
     content: "\e87e";
-}
-.icon-feedback:before {
-    content: "\e87f";
-}
-.icon-find_in_page:before {
-    content: "\e880";
-}
-.icon-find_replace:before {
-    content: "\e881";
-}
-.icon-flip_to_back:before {
-    content: "\e882";
-}
-.icon-flip_to_front:before {
-    content: "\e883";
-}
-.icon-get_app:before {
-    content: "\e884";
-}
-.icon-grade:before {
-    content: "\e885";
-}
-.icon-group_work:before {
-    content: "\e886";
-}
-.icon-help:before {
-    content: "\e887";
-}
-.icon-highlight_remove:before {
-    content: "\e888";
 }
 .icon-history:before {
     content: "\e889";
@@ -2173,36 +1591,6 @@
 }
 .icon-hourglass_full:before {
     content: "\e88c";
-}
-.icon-https:before {
-    content: "\e88d";
-}
-.icon-info:before {
-    content: "\e88e";
-}
-.icon-info_outline:before {
-    content: "\e88f";
-}
-.icon-input:before {
-    content: "\e890";
-}
-.icon-invert_colors_on:before {
-    content: "\e891";
-}
-.icon-label:before {
-    content: "\e892";
-}
-.icon-label_outline:before {
-    content: "\e893";
-}
-.icon-language:before {
-    content: "\e894";
-}
-.icon-launch:before {
-    content: "\e895";
-}
-.icon-list:before {
-    content: "\e896";
 }
 .icon-lock:before {
     content: "\e897";
@@ -2564,117 +1952,6 @@
 .icon-touch_app:before {
     content: "\e923";
 }
-.icon-accessible:before {
-    content: "\e924";
-}
-.icon-compare_arrows:before {
-    content: "\e925";
-}
-.icon-date_range:before {
-    content: "\e926";
-}
-.icon-donut_large:before {
-    content: "\e927";
-}
-.icon-donut_small:before {
-    content: "\e928";
-}
-.icon-line_style:before {
-    content: "\e929";
-}
-.icon-line_weight:before {
-    content: "\e92a";
-}
-.icon-motorcycle:before {
-    content: "\e92b";
-}
-.icon-opacity:before {
-    content: "\e92c";
-}
-.icon-pets:before {
-    content: "\e92d";
-}
-.icon-pregnant_woman:before {
-    content: "\e92e";
-}
-.icon-record_voice_over:before {
-    content: "\e92f";
-}
-.icon-rounded_corner:before {
-    content: "\e930";
-}
-.icon-rowing:before {
-    content: "\e931";
-}
-.icon-timeline:before {
-    content: "\e932";
-}
-.icon-update:before {
-    content: "\e933";
-}
-.icon-watch_later:before {
-    content: "\e934";
-}
-.icon-pan_tool:before {
-    content: "\e935";
-}
-.icon-ac_unit:before {
-    content: "\eb3b";
-}
-.icon-airport_shuttle:before {
-    content: "\eb3c";
-}
-.icon-all_inclusive:before {
-    content: "\eb3d";
-}
-.icon-beach_access:before {
-    content: "\eb3e";
-}
-.icon-business_center:before {
-    content: "\eb3f";
-}
-.icon-casino:before {
-    content: "\eb40";
-}
-.icon-child_care:before {
-    content: "\eb41";
-}
-.icon-child_friendly:before {
-    content: "\eb42";
-}
-.icon-fitness_center:before {
-    content: "\eb43";
-}
-.icon-free_breakfast:before {
-    content: "\eb44";
-}
-.icon-golf_course:before {
-    content: "\eb45";
-}
-.icon-hot_tub:before {
-    content: "\eb46";
-}
-.icon-kitchen:before {
-    content: "\eb47";
-}
-.icon-pool:before {
-    content: "\eb48";
-}
-.icon-room_service:before {
-    content: "\eb49";
-}
-.icon-smoke_free:before {
-    content: "\eb4a";
-}
-.icon-smoking_rooms:before {
-    content: "\eb4b";
-}
-.icon-spa:before {
-    content: "\eb4c";
-}
-.icon-goat:before {
-    content: "\e936";
-}
 .icon-spinner5:before {
     content: "\e943";
 }
@@ -2739,27 +2016,27 @@
     content: "\e951";
 }
 .icon-google-plus:before {
-    content: "\e952";
+    content: "\e93d";
 }
 .icon-google-drive:before {
     content: "\e953";
 }
 .icon-facebook:before {
-    content: "\e93d";
-}
-.icon-twitter:before {
     content: "\e93e";
 }
-.icon-feed2:before {
+.icon-twitter:before {
     content: "\e93f";
 }
-.icon-vimeo:before {
+.icon-feed4:before {
     content: "\e940";
+}
+.icon-vimeo:before {
+    content: "\e952";
 }
 .icon-picassa:before {
     content: "\e954";
 }
-.icon-dribbble3:before {
+.icon-dribbble:before {
     content: "\e955";
 }
 .icon-dropbox:before {
@@ -2768,10 +2045,10 @@
 .icon-github:before {
     content: "\e900";
 }
-.icon-github4:before {
+.icon-github-reverse:before {
     content: "\e901";
 }
-.icon-linkedin2:before {
+.icon-linkedin:before {
     content: "\e941";
 }
 .icon-stackoverflow:before {
@@ -2810,6 +2087,15 @@
 .icon-star:before {
     content: "\e906";
 }
+.icon-tv:before {
+    content: "\e924";
+}
+.icon-sound:before {
+    content: "\e925";
+}
+.icon-video:before {
+    content: "\e926";
+}
 .icon-trash:before {
     content: "\e95d";
 }
@@ -2821,6 +2107,9 @@
 }
 .icon-settings:before {
     content: "\e908";
+}
+.icon-camera2:before {
+    content: "\e927";
 }
 .icon-tag:before {
     content: "\e909";
@@ -2873,11 +2162,20 @@
 .icon-note:before {
     content: "\e910";
 }
+.icon-clock:before {
+    content: "\e928";
+}
 .icon-paperplane:before {
     content: "\e911";
 }
 .icon-params:before {
     content: "\e968";
+}
+.icon-banknote:before {
+    content: "\e929";
+}
+.icon-data:before {
+    content: "\e92a";
 }
 .icon-music:before {
     content: "\e969";
@@ -2885,12 +2183,39 @@
 .icon-megaphone:before {
     content: "\e96a";
 }
+.icon-study:before {
+    content: "\e92b";
+}
+.icon-lab:before {
+    content: "\e92c";
+}
+.icon-food:before {
+    content: "\e92d";
+}
+.icon-t-shirt:before {
+    content: "\e92e";
+}
+.icon-fire:before {
+    content: "\e92f";
+}
+.icon-clip:before {
+    content: "\e930";
+}
 .icon-shop:before {
     content: "\e912";
+}
+.icon-calendar:before {
+    content: "\e931";
+}
+.icon-wallet:before {
+    content: "\e932";
 }
 .icon-vynil:before {
     content: "\e96b";
 }
 .icon-truck:before {
     content: "\e96c";
+}
+.icon-world:before {
+    content: "\e933";
 }
