--- a/src/css/atom/card.scss
+++ b/src/css/atom/card.scss
@@ -10,6 +10,7 @@
 	margin-bottom: 1.5em;
 	margin-top: 0em;
 	overflow: hidden;
+	display: block;
 	position:relative;
 	& figure {
 		margin:-10px;
@@ -19,6 +20,7 @@
 	}
 	& figure img{
 		width:100%;
+		height:240px;
 		padding:0;
 		margin:0;
 		transition: all 200ms ease-in-out;
