--- a/src/css/atom/hr.scss
+++ b/src/css/atom/hr.scss
@@ -5,6 +5,10 @@
 		border: solid #CCC;
 		border-width: 1px 0 0;
 		height: 0;
+		display:block;
+		&:before, &:after {
+			clear:both;
+		}
 	}
 
 	/* # Specific hrs              chekout patternify.com
@@ -12,6 +16,15 @@
 
 		hr.letterpressed {
 
+		}
+		hr.nested {
+		    border-width: 0;
+		    border-bottom: 1px solid white;
+		    width:100%;
+		    height:2px;
+		    background-color: rgb(240,240,24à);
+		    display:inline-block;
+			@include clearfix();
 		}
 
 		hr.lines {
@@ -22,6 +35,11 @@
 			background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAHklEQVQIW2NkQAX1jEj8eiC7ESYA5oAkQQJwDkgAAGKuA4R0d0m8AAAAAElFTkSuQmCC) repeat;
 			opacity: 0.8;
 		}
+
+	    hr.lines.light {
+	      background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAHklEQVQIW2NkQAL/gYARxgdzQAAkAOOA2IzIHJAAACAGEAFjDBirAAAAAElFTkSuQmCC) repeat;
+	      opacity:0.4;
+	    }
 
 		hr.triangle {
 			border: none;
@@ -70,4 +88,26 @@
 			background-image: -moz-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
 			background-image: -ms-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
 			background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0); 
+		}
+
+
+		hr.half {
+			display:inline-block;
+			width: 50%;
+		}
+
+		hr.quart {
+			display:inline-block;
+			width: 25%;
+		}
+
+		hr.tiny {
+			display:inline-block;
+			width: 10%;
+		}
+
+		hr.centered {
+			display:block;
+			margin-left: auto;
+			margin-left: right;
 		}
