--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -30,7 +30,6 @@
 		$title-size: 2.2rem;
 		$text-size: 1.4rem;
 
-
 		$title-font: "Roboto", sans-serif;
 		$text-font: "Merriweather", serif;
 		$base-color: $color-grey-text;
@@ -55,7 +54,7 @@
 							} 
 
 		hr {
-			margin: $text-size * 2 0 0;
+			margin: $text-size 0 $text-size / 2 0 ;
 		}
 
 		.show-baseline {
@@ -96,6 +95,9 @@
 			letter-spacing: .03rem;
 			color:lighten($base-color, 10%);
 		 	margin-bottom: $text-size;
+		 	&:after {
+		 		clear:both;
+		 	}
  		}
 
  		article p:first-child {
@@ -114,11 +116,6 @@
 			padding-right: 8px;
 			padding-left: 3px; 
 		}
-		
-
- 		li {
-			margin-bottom: .5rem;
- 		}
 
 
 		/* # Icons
@@ -147,12 +144,12 @@
 
 		em, i, .i       { font-style: italic; }
 		strong, b, .b   { font-weight: 800; }
-		.smaller 		{ font-size: 75%; }
-		small, .small   { font-size: 80%; }
-		big, .big		{ font-size: 130%; }
-		.bigger			{ font-size: 175%; }
-		.biggest		{ font-size: 200%; }
-		.lead			{ font-size: 120%; }
+		.smaller 		{ font-size: 50%; line-height: 50%; }
+		small, .small   { font-size: 70%; line-height: $text-size * 0.5!important; }
+		big, .big		{ font-size: $text-size * 1.3; line-height: $text-size * 1; }
+		.bigger			{ font-size: $text-size * 1.5; line-height: $text-size * 2; }
+		.biggest		{ font-size: $text-size * 1.8; line-height: $text-size * 2; }
+		.lead			{ font-size: $text-size * 2; line-height: $text-size * 2; }
 		.caps			{ font-variant: small-caps; }
 
 		.text-left 		{ text-align: left; }
