--- a/src/css/component/_article.scss
+++ b/src/css/component/_article.scss
@@ -14,8 +14,30 @@ article {
 	}
 	img {
 		max-width: 100%;
-		margin-top: 40px;
-		margin-bottom:40px;
+		margin-top: $text-size * 3;
+		margin-bottom:$text-size * 3;
+		&.big {
+			width: 130%;
+			max-width: 130%;
+			margin-left:-15%;
+		}
+		&.left {
+			float:left;
+			padding:$text-size;
+			padding-left:0;
+		}
+		&.right {
+			float:right;
+			padding:$text-size;
+			padding-right:0;
+		}
+	}
+	p img {
+		margin-top: 0;
+		margin-bottom:0;
+	}
+	h1 {
+		margin-top: $text-size * 3;
 	}
 	aside {
 		
