--- a/src/css/component/_share-menu.scss
+++ b/src/css/component/_share-menu.scss
@@ -74,6 +74,9 @@ $base-index: 499;
 			}
 			margin: auto;
 		}
+		i {
+			transition: all 200ms ease-in-out;
+		}
 	}
 	&.displayed {
 		visibility: visible;
@@ -114,10 +117,46 @@ $base-index: 499;
 			opacity:1;
 			transition-delay:350ms;
 			visibility:visible;
+			i {
+				padding-left:14px;
+				padding-right:14px;
+			}
 		}
 		.share-menu-overlay {
 			opacity:1;
 			transform:scale(100);
 		}
 	}
+
+	.share-menu {
+		display:flex;
+	}
+	h1,h2,h3,h4,h5,h6,p, i {
+		color: white;
+		text-align: center;
+	}
+	h1,h2,h3,h4,h5,h6 {
+		transition: all 200ms ease-out;
+		transform: translateY(0px);
+		transition-delay: 0.6s;
+	}
+	ul li {
+		transition: all 350ms ease-in;
+		opacity:0;
+	}
+
+	&.active {
+		h1,h2,h3,h4,h5,h6 {
+			transform: translateY(-5px);
+		}
+		ul li {
+			opacity:0.4;
+			transition-delay: 0s;
+			&:hover {
+				opacity:0.8;
+
+			}
+		}
+	}
+
 }
