--- a/src/css/component/_side-menu.scss
+++ b/src/css/component/_side-menu.scss
@@ -61,33 +61,68 @@ $base-index: 498;
 			font-size: 3.6rem;
 			margin-top:14px;
 			margin-bottom:30px;
+			text-align: center;
 		}
 		h1,h2,h3,h4,h5,h6 {
 			color:white;
-			text-align: center;
 		}
-		a {
-			background-color: rgba(0,0,0,0.3);
-			position:relative;
-			margin-bottom:20px;
-			display:inline-block;
-			img {
-				z-index: 1;
-				width:100%;
-				height:100px;
-			}
-			h4 {
-				z-index: 2;
-				position:absolute;
-				top:42px;
-				left:0;
-				right:0;
-			}
-		}
-
-
-
 		// content
+
+		.item {
+			position:relative;
+			margin-bottom: $text-size * 2;
+			display:inline-block;
+			box-sizing: border-box;
+			width: 100%;
+			height:140px;
+			margin-bottom: $text-size;
+			margin-top: 0em;
+			overflow: hidden;
+			z-index: $base-index + 10;
+			img {
+				width:100%;
+				height:140px;
+				padding:0;
+				margin:0;
+				transition: all 200ms ease-in-out;
+				filter: brightness(0.2);
+				-webkit-filter: brightness(0.2);
+				//z-index: $base-index + 10;
+			}
+			.box {
+				margin: auto;
+				position:absolute;
+				top:0;
+				display:flex;
+				height:140px;
+				width:100%;
+				padding-left:10%;
+				padding-right:10%;
+				text-align: center;
+				//z-index: $base-index + 11;
+				h4 {
+					text-align: left;
+					margin: auto;
+					font-weight: bold;
+				}
+				h6 {
+					text-align: right;
+					margin: auto;
+					opacity:0;
+					transition: all 200ms ease-in-out;
+				}
+			}
+			&:hover {
+				img {
+					filter: brightness(0.1);
+					-webkit-filter: brightness(0.1);	
+				}
+				.box h6 {
+					opacity:1;
+				}
+			}
+
+		}
 
 		ul li {
 			transition: all 350ms ease-in-out;
