--- a/src/css/template/_main.scss
+++ b/src/css/template/_main.scss
@@ -4,25 +4,17 @@
 	background-color: $color-subtle-grey;
 	height:100%;
 	display: flex;
+	background-image:url('../images/patterns/linedpaper.png');
+	background-repeat: repeat-x repeat-y; 
 	div {
 		margin: auto;
-		@extend .row;
-
-		.one-third {
-			@extend .col-xs-4;
-		}
-		.center {
-			@extend .col-xs-12;
-		}
+		
 		h1 {
 			margin-top:0;
 			font-size: 10rem;
 			font-family: "Cookie";
 			@include subtle-underlined(white);
-		}
-		text-align: center;
-		button a{
-			color:white;
+			text-align: center;
 		}
 	}
 
