--- a/src/css/template/_reader.scss
+++ b/src/css/template/_reader.scss
@@ -20,7 +20,7 @@
 	.fixed-background {
 		text-align: center;
 	}
-	footer {
+	>footer {
 		padding-top:80px;
 		padding-bottom:80px;
 		h6 {
@@ -38,37 +38,5 @@
 			}
 		}
 	}
-	// content
-	.share-menu-wrapper {
-		.share-menu {
-			display:flex;
-		}
-		h1,h2,h3,h4,h5,h6,p, i {
-			color: white;
-			text-align: center;
-		}
-		h1,h2,h3,h4,h5,h6 {
-			transition: all 200ms ease-out;
-			transform: translateY(0px);
-			transition-delay: 0.6s;
-		}
-		ul li {
-			transition: all 350ms ease-in;
-			opacity:0;
-		}
 
-		&.active {
-			h1,h2,h3,h4,h5,h6 {
-				transform: translateY(-5px);
-			}
-			ul li {
-				opacity:0.8;
-				transition-delay: 0s;
-				&:hover {
-					opacity:1;
-
-				}
-			}
-		}
-	}
 }
