--- a/src/css/template/_vitrine.scss
+++ b/src/css/template/_vitrine.scss
@@ -1,6 +1,9 @@
 .vitrine {
 	animation: fadeIn;
 	animation-duration: .5s;
+	.navbar {
+		text-align: center;
+	}
 	.subtle-grey {
 		background-color:$color-subtle-grey;
 		border-bottom: 1px solid $color-subtle-border;
@@ -11,7 +14,7 @@
 		width:100%;
 		height:90%;
 		display:flex;
-			text-align: left;
+		text-align: center;
 		.section-content {
 			width:95%;
 		}
@@ -30,6 +33,11 @@
 
 	// NAVBAR CONTENT
 	.navbar {
+		ul {
+			margin-left:-25px;
+			margin-top:0px;
+			margin-bottom:0px;
+		}
 		ul li {
 			margin-top: 25px;
 			margin-left: 30px;
@@ -50,7 +58,7 @@
 				}
 			}
 			&:first-child {
-				margin-right:10px;
+				margin-left:0px;
 			}
 		}
 		&.fixed {
@@ -88,29 +96,28 @@
 	.page {
 		width:960px;
 		margin: 0 auto;
-		@extend .row;
-	}
-
-
-	.center {
-		padding-top:40px;
-		padding-bottom:60px;
-		@extend .col-xs-12;
-		text-align: center;
-	}
-
-	.one-third {
-		@extend .col-xs-4;
-	}
-
-	.one-quart {
-		@extend .col-xs-3;
 	}
 
 	footer {
+		background-color: $color-primary;
+		color:white;
+		padding:80px;
+		h1,h2,h3,h4,h5,h6 {
+			color: white;
+		}
+		li {
+			line-height: $text-size / 1;
+		}
 		a {
-			font-size: 1.5rem;
-			line-height: 0.5rem;
+			font-size: $text-size;
+			line-height: $text-size / 1.3;
+			color: white;
+			font-weight: 600;
+			border-bottom: 1px solid color("grey", "lighten-4");
+			&:focus, &:hover {
+				text-decoration: none;
+				border-bottom: 1px solid color("grey", "darken-2");
+			}
 		}
 	}
 }
