--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -17,6 +17,11 @@
 @import "atom/card";
 @import "atom/tag";
 @import "atom/inclined";
+@import "atom/navigation";
+@import "atom/select";
+@import "atom/touch-animation";
+@import "atom/special-button/codrops-naira.scss";
+@import "atom/special-input/materials.scss";
 
 
 @import "component/modal";
