--- a/src/css/template/_main.scss
+++ b/src/css/template/_main.scss
@@ -12,7 +12,7 @@
 		h1 {
 			margin-top:0;
 			font-size: 10rem;
-			font-family: "Cookie";
+			font-family: "Pacifico";
 			@include subtle-underlined(white);
 			text-align: center;
 		}
